fix: spacing-socials

--- a/styles.css
+++ b/styles.css
@@ -312,7 +312,7 @@ a:active {
 .social-links {
     display: flex;
     justify-content: center; /* Center the links horizontally */
-    margin-top: 50px; /* Space above the social links */
+    margin-top: 100px; /* Space above the social links */
 }
 
 .links {
